--- a/portfolio/resume.css
+++ b/portfolio/resume.css
@@ -1,19 +1,19 @@
 body{
-    margin: 0px;
+    margin: 5px 5px;
     background-color: rgb(30, 29, 29);
 }
 
-/* body header */
+                                    /* body header */
 #body-header{
     height: 65vh;
-    background-image: url("C:/Users/pranjal/OneDrive/Documents/web dev/portfolio/fotis-fotopoulos-6sAl6aQ4OWI-unsplash.jpg");
+    background-image: url("/fotis-fotopoulos-6sAl6aQ4OWI-unsplash.jpg");
     background-size: cover;
     background-position: center;
     opacity: 0.5;
     background-attachment: fixed;
 }
 
-/* horizontal list */
+                                /* horizontal list */
 .horizontal-list{
     list-style: none;
     padding-left: 0px;
@@ -47,7 +47,7 @@ body{
     text-align: center;
 }
 
-/* name and social icons */
+                                /* name and social icons */
 
 #name-social-container{
     margin-top: 20vh;
@@ -109,7 +109,7 @@ section:nth-child(2n+1){
     color: #6f5adc;
 }
   
-/* about and image sec */
+                            /* about and image section */
 
 #about{
     height: auto;
@@ -148,7 +148,7 @@ section:nth-child(2n+1){
     transition: color 1s, border-bottom 4s;
 }
 
-/* skills section */
+                                /* skills section */
 
 .skills-display{
     width: 80%;
@@ -156,17 +156,22 @@ section:nth-child(2n+1){
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 .skills-progress{
     background-color: #000;
     border-radius: 0.8rem;
     height: 1.5rem;
     width: 7rem;
+    border-radius: 1rem;
+    box-shadow: 1px 1px 2px 1px #31312f inset;
+    margin: 25px;
+    overflow: hidden;
 }
 
-.skills-progress>div{
-    border-radius: 0.8rem;
+.skills-progress > div{
+    border-radius: 20px 0px 0px 20px;
+    box-shadow: 1px 1px 5px 2px #31312f;
 }
 
 .skill-name span{
@@ -175,12 +180,287 @@ section:nth-child(2n+1){
     font-weight: 700;
     font-size: 1rem;
     padding-left: 0.5rem;
+    vertical-align: middle;
+}
+
+                                /* Work Experience */
+
+.timeline {
+    position: relative;
+    width: 75%;
+}
+
+.timeline-box {
+    padding: 5px;
+    width: 40%;
+    min-height: 150px;
+    position: relative;
+    left: 5%;
+    text-align: right;
+}
+
+.timeline-box::after {
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-color: lightgrey;
+    top: 25%;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+.timeline-box:nth-child(2n) {
+    left: 53%;
+}
+
+.timeline-box:nth-child(2n+1)::after {
+    right: -11.8%;
+}
+
+.timeline-box:nth-child(2n)::after {
+    left: -9%;
+}
+
+.timeline-container {
+    padding: 8px;
+}
+
+.timeline-logo {
+    position: absolute;
+    width: 50px;
+    overflow: hidden;
+}
+
+.timeline-logo > img {
+    width: 100%;
+}
+
+#timeline-divider {
+    position: absolute;
+    width: 0;
+    top: 10%;
+    left: 50%;
+    border: 1px dashed #24e86fd9;
+    height: 66%;
+    color: #433E3F;
+}
+
+#timeline-divider .timeline-traveller {
+    position: sticky;
+    top: 135px;
+    z-index: 2;
+}
+
+#timeline-divider i {
+    transform: rotate(90deg);
+    margin-top: -35px;
+    display: block;
+    color: #2857a4;
+}
+
+.experience-designation {
+    font-size: 1.4rem;
+}
+
+.experience-company-name {
+    margin: 5px 0 0;
+    color: #1ce1ef;
+    font-weight: 400;
+    font-size: 1.2rem;
+}
+
+.experience-duration {
+    color: #9e9b9b;
+    font-weight: 100;
+    color: grey;
+    font-size: 1rem;
+}
+
+.experience-description {
+    font-size: 14px;
+    padding: 2px;
+    color: grey;
+    line-height: 20px;
+}
+
+.text-align-justify {
+    text-align: justify;
+}
+
+/* Portfolio Section */
+
+#portfolio-container {
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 50px;
+    margin-bottom: 20px;
+    justify-content: space-around;
+}
+
+.portfolio-image-container {
+    max-width: 300px;
+    overflow: hidden;
+    margin: 30px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.portfolio-image-container img {
+    width: 100%;
+    height: 100%;
+}
+
+.portfolio-details {
+    transition: all 0.5s ease-in-out;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    color: transparent;
+    text-align: center;
+    padding: 10px;
+}
+
+.portfolio-image-container:hover {
+    box-shadow: 0 0 20px #74ADC8;
+}
+
+.portfolio-image-container:hover .portfolio-details {
+    background-color: #80808078;
+    color: white;
+}
+
+
+/* contact sec */
+#contact {
+    background-color: #66BD6D;
+    background-image: linear-gradient(50deg, #2857a4 0%, #403066 54%);
+    color: black;
+    padding-bottom: 40px;
+}
+
+#contact h1,
+#contact h1 span {
+    color: black;
+}
+
+#contact-form {
+    margin-left: 20%;
+}
+
+#contact-container {
+    display: flex;
+}
+
+#my-details-container {
+    width: 35%;
+    margin-left: 6%;
+}
+
+#my-details-container h3 {
+    color: black;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 850;
+    font-size: 1.2rem;
+}
+
+#contact-form-container {
+    width: 50%;
+}
+
+#my-details-container p {
+    color: black;
+    font-size: 1.05rem;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;   
+}
+
+.my-details-info-container {
+    margin-bottom: 20px;
+    color: black;
+    font-size: 1.05rem;
+    font-weight: 800;
+}
+
+.my-details-info-container span {
+    margin-left: 0.4rem;
+}
+
+.my-details-info-container i {
+    color: black;
+}
+
+.my-details-icon {
+    width: 1rem;
+    height: 1rem;
+    vertical-align: bottom;
+    margin-right: 0.5rem;
+}
+
+#contact-form input,
+textarea {
+    max-width: 90%;
+    margin: 15px;
+    padding: 4px 10px;
+    border: 0px solid transparent;
+    border-bottom: 2px solid #66BD6D;
+    color: #d9dcdd;
+    background: transparent;
+    width: 90%;
+    line-height: 1.6;
+    font-size: 1.05rem;
+}
+
+#contact-form button[type="submit"] {
+    background: transparent;
+    font-size: 0.95rem;
+    border: 2px solid #66BD6D;
+    margin-top: 5%;
+    margin-left: 35%;
+    border-radius: 2px;
+    color: black;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 900;
+    letter-spacing: 0.046875em;
+    line-height: 1;
+    padding: 0.8em 0.8em 0.78em;
+    text-transform: uppercase;
+}
+
+#contact-form button:hover {
+    background: black;
+    color: #66BD6D;
+    transition-delay: color 2s border-bottom 4s ;
+    border: 2px solid black;
+}
+
+#contact .social-icons li a i {
+    font-size: 1.2rem;
+    margin: 40px 10px 10px;
+    padding: 10px 14px 20px 10px;
+
+}
+
+#contact .social-icons li a i:hover{
+    box-shadow: 0px 0px 6px 6px #66BD6D;
+    border-radius: 60%;
+    border: 1px;   
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
 }
 
 
 /* common margin class */
 
-.mb75px{
+.mb75px {
     margin-bottom: 75px;
 }
 
